--- a/test.html
+++ b/test.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 
 	<head>
-		<link href="http://code.jquery.com/qunit/qunit-1.12.0.css" rel="stylesheet">
-		<script src="http://code.jquery.com/qunit/qunit-1.12.0.js"></script>
+		<link href="http://code.jquery.com/qunit/qunit-1.18.0.css" rel="stylesheet">
+		<script src="http://code.jquery.com/qunit/qunit-1.18.0.js"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/blanket.js/1.1.4/blanket.min.js"></script>
-		<script src="jquery.liblink.js" data-cover></script>
+		<script src="jquery.liblink.js"></script>
 		<title>libLink</title>
 	</head>
 
